--- a/install
+++ b/install
@@ -137,26 +137,26 @@ elif [[ -n "$(command -v curl)" ]]; then
 # 	fi
 fi
 
-# ---------------------------------------------------------------INSTALLER-LOGIC
+# -------------------------------------------------------------BACKUP-OLD-FOLDER
 
 # If ~/.nodecliac exists rename folder to allow for new one.
-if [[ -e ~/.nodecliac ]]; then
-	cp -a ~/.nodecliac "$HOME/.nodecliac.bak.$timestamp"
+if [[ -e ~/.nodecliac ]]; then cp -a ~/.nodecliac "$HOME/.nodecliac.bak.$timestamp"; fi
 
-	# Remove nodecliac global module from npm and yarn.
-	# yarn global bin
-	# yarn global list
-	# npm list --silent -q -g --depth=0
+# ---------------------------------------------------------UNINSTALL-OLD-INSTALL
 
-	# Run uninstall command.
-	if [[ -n "$(__exists "nodecliac")" ]]; then nodecliac uninstall > /dev/null 2>&1; fi
-	# Uninstall from npm if installed globally.
-	if [[ -n "$(__exists "npm")" ]]; then sudo npm uninstall -g nodecliac > /dev/null 2>&1; fi
-	# Uninstall from yarn if installed globally.
-	if [[ -n "$(__exists "yarn")" ]]; then yarn global remove nodecliac > /dev/null 2>&1; fi
-fi
+# Remove nodecliac global module from npm and yarn.
+# yarn global bin
+# yarn global list
+# npm list --silent -q -g --depth=0
 
-# ------------------------------------------------------------------------------
+# Run uninstall command.
+if [[ -n "$(__exists "nodecliac")" ]]; then nodecliac uninstall > /dev/null 2>&1; fi
+# Uninstall from npm if installed globally.
+if [[ -n "$(__exists "npm")" ]]; then sudo npm uninstall -g nodecliac > /dev/null 2>&1; fi
+# Uninstall from yarn if installed globally.
+if [[ -n "$(__exists "yarn")" ]]; then yarn global remove nodecliac > /dev/null 2>&1; fi
+
+# ---------------------------------------------------------------INSTALLER-LOGIC
 
 if [[ "$INSTALLER" == "aconly" ]]; then
 	# Clone repo with first found command. (order: wget > curl > git)
