update: Modify glob to match files in subdirectories

--- a/install
+++ b/install
@@ -276,7 +276,7 @@ if [[ "$INSTALLER" == "aconly" ]]; then
 
 	# Strip comments/empty lines from files.
 	echo " - Stripping comments from Perl/Shell scripts..."
-	perl -pi -e 's/^\s*#(?!!).*?$//g;s/\s{1,}#\s{1,}.+$//g;s!^\s+?$!!' ~/.nodecliac/src/*.{sh,pl}
+	perl -pi -e 's/^\s*#(?!!).*?$//g;s/\s{1,}#\s{1,}.+$//g;s!^\s+?$!!' ~/.nodecliac/src/**/*.{sh,pl,nim}
 	log " $CHECK_MARK Stripped comments from Perl/Shell scripts."
 	# [http://isunix.github.io/blog/2014/07/24/perl-one-liner-to-remove-blank-lines/].
 	# [https://stackoverflow.com/a/6995010], [https://unix.stackexchange.com/a/179449]
